Localized Ideas, changed National Focus durations and removed Bond

--- a/maddenist stuffs/localisation/english/gup_events_decisions_l_english.yml
+++ b/maddenist stuffs/localisation/english/gup_events_decisions_l_english.yml
@@ -1982,4 +1982,23 @@
    CHI_rice_famine_desc:0 "Our rice fields had recently been destroyed by St. Gloriana, and because of this, our own students can't even eat properly! We must find ways to alleviate this ASAP."
    GLO_liability:0 "Limited Liability"
    GLO_liability_desc:0 "The Gloriana Airforce is in constant need of renovations, and with this new strategy, we can ensure to construct much more to supply our needs."
-
+   GLO_heart_oak:0 "Heart of Oak"
+   GLO_heart_oak_desc:0 "With a Heart of Oak, we shall pump out even more ships for us to ensure we can defend our very own home island!"
+   GLO_shad_fac:0 "Shadow Factories"
+   GLO_shad_fac_desc:0 "The factories we currently have will be our best substitute to the war effort, instead of constructing new ones. Of course, conversion may be costly but we make due with what we have."
+   ENG_peace:0 "Peace in our Time"
+   ENG_peace_desc:0 "[GER.GetName] has backed off on any form of aggression what so ever. Peace has been achieved!
+   GLO_deffensive_effort_mod:0 "Gloriana Defensive Effort"
+   GLO_deffensive_effort_mod_dest:0 "We must take every measure to expand our forts! War may very well reach our homeland!"
+   GLO_commonwealth_economy_council:0 "Commonwealth Economy Council"
+   GLO_commonwealth_economy_council_desc:0 "The Commonwealth Economy Council ensure that every sub-school under Gloriana is currently ensuring a decent trade to make sure the economy of the certain schools are holding up well."
+   GLO_RAJ_autonomy_change:0 "Colonial Exploitations"
+   GLO_RAJ_autonomy_change_desc:0 "St. Gloriana, our overlord school, is currently exploiting our resources. As a result, our school council is currently doing their best to become even more independent from them."
+   GLO_over_the_top_mod:0 "Story of Gloriana"
+   GLO_over_the_top_mod_desc:0 "Gloriana, ye the symbol of elegance, stands tall amongst all the other schools as the 62nd Tournament grew harsh on us. Ye who stands tall in the face of everything, bearing the mark of elegance and courage against all others who oppose ye! Arise now, ye students of St. Gloriana, and join the team, for Gloriana shall not spill one drop of tea till' the end of her time!"
+   GLO_wartime_defense_ban:0 "Wartime Defense Ban"
+   GLO_wartime_defense_ban_desc:0 "With the potential of the 63rd Tournament at hand, a ban on all offending parties is being issued to counter-act any revolutions within' the academy."
+   GLO_fight_authority:0 "Foreign Support"
+   GLO_fight_authority_desc:0 "If we do nothing but watch as other schools fall, then we will not be able to maintain peace against tyrants!"
+   GLO_fight:0 "Taking the Fight"
+   GLO_fight_desc:0 "It's time to take the offensive. Our enemies continue to build their forces as we remain weak. It's time to take action!"
