--- a/maddenist stuffs/localisation/english/gup_general_l_english.yml
+++ b/maddenist stuffs/localisation/english/gup_general_l_english.yml
@@ -3500,11 +3500,12 @@
     ENG_royal_navy_requisition:0 "Royal Navy Requisition Service"
     ENG_royal_navy_requisition_desc:0 "The current navy is not enough for even an adequete defense. Turning to the public may prove beneficial for us."
     ENG_heart_of_oak:0 "Heart of Oak"
-    ENG_heart_of_oak_desc:0 "The strength of our navy shall now be put to the test. WIth the citizens mobilized and the academy ready, the inevitable war will hasten the production of our vessels."
+    ENG_heart_of_oak_desc:0 "The strength of our navy shall now be put to the test. With the citizens mobilized and the academy ready, the war will hasten the production of our vessels."
     ENG_finalize_commonwealth:0 "Finalize Commonwealth Rearmament"
     ENG_finalize_commonwealth_desc:0 "The Empire's strength comes from its size. Yet its greatest weakness comes from its sparsely defended territories. All parts of our Epmire must answer our call to arms."
     ENG_Remembered_Not_Forgotten:0 "Remembered But Not Forgotten"
     ENG_Remembered_Not_Forgotten_desc:0 "Those who gave their lives in the last tournament will not have been in vain when conflict breaks out again. Gloriana must learn from its past lessons."
+    remem_forgot_tt:0 "§GAllows the modification and training of Divisions once more§G"
     ENG_Over_the_Hills:0 "Over the Hills and Far Away"
     ENG_Over_the_Hills_desc:0 "The war may not be on our home island, but it certrainly has reached our homes"
     ENG_On_the_Beaches:0 "On the Beaches and in The Streets"
@@ -3544,25 +3545,25 @@
  
  ##ECONOMY FOCUSES##
     ENG_railways_act:0 "1936 Railways Act"
-    ENG_railways_act_desc:0 "At present our nations railways are operated by a consortium of railway corporations, enboldened by previous pro railway legistation of the railways act of 1924, making all cargo over 4 tonnes has to travel by rail, though a boon for railways it has meant truck manufacturing is rather lacking it may be time to adjust our rules in this regard."
+    ENG_railways_act_desc:0 "At present our academy's railways are operated by a consortium of railway corporations, enboldened by previous pro railway legistation of the railways act of 1924, making all cargo over 4 tonnes has to travel by rail. Though a boon for railways, it has meant truck manufacturing is rather lacking. It may be time to adjust our rules in this regard."
     ENG_Commonwealth_Economic:0 "Commonwealth Economic Council"
-    ENG_Commonwealth_Economic_desc:0 "The imperial federation may be a fantasy but empire wide trade is not, if our empire is to last a thousand years we must make decisive action to ensure trade remains within the empire as a whole, and a upside of this policy is that its quite popular with voters."
+    ENG_Commonwealth_Economic_desc:0 "The imperial federation may be a fantasy but empire wide trade is not. If our empire is to last a thousand years we must make decisive action to ensure trade remains within the empire as a whole, and a upside of this policy is that its quite popular with voters."
     ENG_Royal_Infrastructure:0 "Royal Infrastructure Fund"
-    ENG_Royal_Infrastructure_desc:0 "A rather novel idea has been proposed by the home office, that being a slight reallocation of funds towards our colonial and dominion holdings to boost resource extraction, though negligable in terms of our own benefit, it would make the locals quite happy as would the extra extraction capacity"
+    ENG_Royal_Infrastructure_desc:0 "A rather novel idea has been proposed by the home office, that being a slight reallocation of funds towards our colonial and dominion holdings to boost resource extraction. though negligable in terms of our own benefit, it would make the locals quite happy as would the extra extraction capacity"
     ENG_Garden_Shears:0 "Garden Shears"
-    ENG_Garden_Shears_desc:0 "A nice trimming of the bushes in the countryside ought help with land clearances, who knows we may even find the round table."
+    ENG_Garden_Shears_desc:0 "A nice trimming of the bushes in the countryside ought help with land clearances. Who knows, we may even find the round table."
     ENG_The_Green_Flow:0 "The Green must flow"
-    ENG_The_Green_Flow_desc:0 "If war were declared today we'd be occupied within the week, such stirring words from the esteemed rosehip has somewhat stirred the home office into authorizing additional funds away from debt repayment and instead towards the neccessary defence fund."
+    ENG_The_Green_Flow_desc:0 "If war were declared today, we'd be occupied within the week. Such stirring words from the esteemed Rosehip have somewhat stirred the home office into authorizing additional funds away from debt repayment and instead towards the neccessary defence fund."
     ENG_Cheese_Gromit:0 "Cheese Gromit"
     ENG_Cheese_Gromit_desc:0 "The fresh, clean and milk flavour of Wensleydale cheese makes it a favourite amongst cheese lovers. The creamy texture melts smoothly on the palate, while the crumbly consistency adds a pleasant and rich contrast, Darjeeling is a particular lover of it and has stated that it is vital to national sovereignty."
     ENG_Commonwealth_Investments:0 "Commonwealth Investments"
-    ENG_Commonwealth_Investments_desc:0 "The Commonwealth Investment commission is a newly proposed programme to help boost economical development across the empire, by no means designed to undermine our place as its leader, the plan involves some limited internal shuffling of resources to help our empire grow domestic production in preparation for wartime needs."
-    ENG_Prospecting_Metal:0 "Prospecting for Metal."
-    ENG_Prospecting_Metal_desc:0 "For many years our colonial investment strategy has been lacking, with minimal reinvestment into areas of not immediate return, we have effectively squandered our empires resources, though we can quickly rectify parts of this issue through investment."
+    ENG_Commonwealth_Investments_desc:0 "The Commonwealth Investment commission is a newly proposed programme to help boost economical development across the empire, by no means designed to undermine our place as its leader. The plan involves some limited internal shuffling of resources to help our empire grow domestic production in preparation for wartime needs."
+    ENG_Prospecting_Metal:0 "Prospecting for Metal"
+    ENG_Prospecting_Metal_desc:0 "For many years our colonial investment strategy has been lacking, with minimal reinvestment into areas of not immediate return, we have effectively squandered our empires resources. We can quickly rectify parts of this issue through investment."
     ENG_Expanding_Harvard:0 "Expanding Harvard"
     ENG_Expanding_Harvard_desc:0 "Through an exchange program with Cambridge we can expect a degree of mutual cooperation between the two institutions, and allow us to expand our own military research and development capabilities in-house."
-    ENG_Ending_Repayments:0 "Ending Repayments."
-    ENG_Ending_Repayments_desc:0 "Finally through economic realization of debt repayments, and financial markets rebalancing we can free ourselves from any concerns of maintaining debt repayments, while post war we will likely lead to near complete economic ruin we must forgo sustainability for total victory."
+    ENG_Ending_Repayments:0 "Ending Repayments"
+    ENG_Ending_Repayments_desc:0 "Finally, through economic realization of debt repayments and financial markets rebalancing, we can free ourselves from any concerns of maintaining debt repayments. While post war we will likely lead to near complete economic ruin, we must forgo sustainability for total victory."
     ##END OF ECONOMY BRANCH##
 
  ##HISTORICAL POLITICAL FOCUSES##
@@ -3625,6 +3626,7 @@
        ENG_combatting_authoritarianism_abroad_desc:0 "The Purple Division civil war has shown us what occurs when we sit on the sidlines. If we are to prevent such radicals from growing across the globe, we must see it fit to itnervene in foreign conflicts when needed. It's time to draft a plan for such an eventuality."
        ENG_combatting_mzansi_boers:0 "Combatting Mzansi Boers"
        ENG_combatting_mzansi_boers_desc:0 "Mzansi has been the more troublesome of the dominions, with a strong contingent of the white population being Anti-Gloriana. Through targetted arrests and other matter, we can help reduce the likelihood of it going rogue during wartime."
+       ENG_mzansi_tt:0 "Will make Fascists in SAF unable to get a hold of power without outside help"
        ENG_no_tea_for_bullies:0 "No Tea for Bullies"
        ENG_no_tea_for_bullies_desc:0 "Kuromorimine, Anzio and CHi-Ha-Tan have proven to us they are unwilling to negotiate, nor comrpomise with us. We must cut them off from all trade and see themselves starve."
        ENG_fight_the_enemy:0 "Taking the Fight to the Enemy"
