--- a/maddenist stuffs/localisation/english/gup_stations_l_english.yml
+++ b/maddenist stuffs/localisation/english/gup_stations_l_english.yml
@@ -2,3 +2,6 @@
 
 super_events_TITLE:0 "Super Events"
 super_events:0 "Super Events"
+war_begins_superevent:0 "Kaikashiki Desu!"
+Gloriana_Super_Event:0 "British Grenadiers - Shortened"
+Katyusha_Super_Event:0 "Katyusha - Shortened"
