Implemented Missing Icons

--- a/maddenist stuffs/localisation/english/gup_events_decisions_l_english.yml
+++ b/maddenist stuffs/localisation/english/gup_events_decisions_l_english.yml
@@ -2002,3 +2002,5 @@
    GLO_fight_authority_desc:0 "If we do nothing but watch as other schools fall, then we will not be able to maintain peace against tyrants!"
    GLO_fight:0 "Taking the Fight"
    GLO_fight_desc:0 "It's time to take the offensive. Our enemies continue to build their forces as we remain weak. It's time to take action!"
+   GLO_economy_commonwealth:0 "Gloriana Economic Aid"
+   GLO_economy_commonwealth_desc:0 "Gloriana has decided to provide us economic aid for our struggling economy. In turn, they have decided to allow us to autonomously govern our own school as we continue to grow."
