fixing indochina forgot to push

--- a/maddenist stuffs/localisation/english/countries_l_english.yml
+++ b/maddenist stuffs/localisation/english/countries_l_english.yml
@@ -5026,4 +5026,8 @@
  RAA_DEF: "the Reichskommissariat Australasien"
  RAA_ADJ: "Australasian"
 
+IND:0 "Indochina"
+IND_DEF:0 "the Indochina"
+ID_ADJ:0 "Indochinese"
+
   
