--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -697,6 +697,13 @@
  SOV_research_city_experiment_desc:0 "One of our foremost scientists, Kurchatov, has noted that when breaking up of kernels in a kilogram of uranium, the energy released must be equal to the explosion of 20,000 tons of trotyl. We need to harness this power before our enemies to ensure the survival of the Motherland."
  SOV_closed_city_network:0 "Closed City Network"
  SOV_closed_city_network_desc:0 "We should set up closed cities for research that require more space than we have available in our military bases. Restricting access to the cities ensures that our research remains secret, while giving our scientists plenty of space for large scale experiments."
+ SOV_complete_five_year_plan:0 "Finish Five Year Plan"
+ SOV_literacy_campaign:0 "Pravda Literacy Campaign"
+ SOV_trans_siberian:0 "Trans Siberian Railway"
+ SOV_develop_grozny_fields:0 "Develop Fields on Grozny"
+ SOV_siberian_exports:0 "Exports from Siberia"
+ SOV_expanding_synthetic:0 "Expand Synthetic Rubber Plants"
+
  strike_usa_focus:0 "Strike the USA!"
  strike_usa_focus_desc:0 "The perfidious Americans have us at their mercy, controlling our supply of oil and other desperately needed resources. Their industry is vastly superior to ours, so if we strike, we had better strike hard! We cannot hope to win a prolonged war against the USA..."
  chinese_puppet_focus:0 "Chinese Puppet"
