Changing Pravda Focus Localisation to one of its own, while cleaning out its old spot.

--- a/maddenist stuffs/localisation/english/focus_l_english.yml
+++ b/maddenist stuffs/localisation/english/focus_l_english.yml
@@ -623,7 +623,7 @@
  ITA_anti_uk_war_goals_desc:0 "The decaying British Empire has us caged in the Mediterranean and will never voluntarily give us the keys. We must strike at the English as soon as the time is right!"
  ITA_japan_friend:0 "Befriend Chi-ha-tan"
  ITA_japan_friend_desc:0 "The Chi-ha-tan are much like us; a young, hungry power with a positive demography, held ransom by trade from waning plutodemocracies like the UK and the Batavian. We should unite with them to form a vibrant Naval Axis across the oceans!"
- soviet_focus:0 "Pravda National Focus"
+ #soviet_focus:0 "Pravda National Focus"
  SOV_finish_five_year_plan:0 "Finish the Five Year Plan"
  SOV_finish_five_year_plan_desc:0 "The second Five Year Plan prioritizes the development of heavy industry. The Pravda Union must develop quickly in order to match the Capitalist and Fascist powers of the West."
  SOV_move_industry_to_urals:0 "Move Industry To the Urals"
@@ -672,8 +672,6 @@
  SOV_anti_fascist_diplomacy_desc:0 "Though all Western regimes are repressive and corrupt, there are none worse than those who pretend to be progressive; or even Socialist! By promoting such false consciousness among the proletariat, they are attempting to delay the Revolution and keep the workers in perpetual bondage."
  SOV_operation_zet:0 "Operation Zet"
  SOV_operation_zet_desc:0 "Though the Kuomintang is reactionary, it seems unlikely that Mao and her brand of communism will prevail in Zhongguo. We should strive to improve relations with Chiang; the ridiculously anachronistic Empire of Chi-ha-tan is bound to collapse soon anyway."
- SOV_annex_tannu_tuva:0 "Annex Tannu Tuva"
- SOV_annex_tannu_tuva_desc:0 "While it hardly matters economically, for political reasons we should formally annex the People's Republic of Tannu Tuva as an autonomous oblast within the Pravda Union."
  SOV_improve_stalin_line:0 "Improve the Katyusha Line"
  SOV_improve_stalin_line_desc:0 "Our western border must be better protected from fascist aggression. The Katyusha Line should be extended and modernized."
  SOV_far_east_fortification_bruh:0 "Far East Fortification"
@@ -688,32 +686,6 @@
  SOV_anti_capitalist_diplomacy_desc:0 "The worst obstacles to global revolution are, without a doubt, the fat bankers of the USA and the ruthless colonialist oppressors of the Gloriana. It must always be our primary aim to slap their grasping hands and undermine their liberalist propaganda."
  SOV_expand_red_fleet:0 "Expand the Red Fleet"
  SOV_expand_red_fleet_desc:0 "The Red Fleet is pathetically weak compared to the navies of the imperialist powers. We must make its expansion a national priority!"
- SOV_anti_colonialist_rebels:0 "The Comintern"
- SOV_anti_colonialist_rebels_desc:0 "With the capitalist system entering its period of final collapse, the correct stance for all Communist parties must be a highly aggressive, militant, ultra-left line. In particular, we urge the Communist parties of the world to devote their energies to the destruction of the moderate left."
- SOV_southern_thrust:0 "Southern Thrust"
- SOV_southern_thrust_desc:0 "Annexing Khatam and Ashur would both secure their vast oil reserves for the Revolution and put direct pressure on the British imperialists in Sphinx and Bharat."
- SOV_reconcile_japan_bruh:0 "Reconcile Chi-ha-tan"
- SOV_reconcile_japan_bruh_desc:0 "Our relations with Chi-ha-tan have always been troubled, but there are bigger fish to fry. By exploiting their desperate lack of natural resources, the Chi-ha-tan could be led by the nose... Their anachronistic feudal regime is bound to fall soon anyway."
- SOV_claim_on_sinkiang:0 "Claim Ipek"
- SOV_claim_on_sinkiang_desc:0 "Under Comrade Sheng Shicai's rule, Ipek is already a virtual Pravda puppet state. We should make it official..."
- SOV_claim_on_sinkiang_threat:0 "Pravda Claimed Ipek"
- SOV_pan_slavic_rhetoric:0 "Pan-Slavic Rhetoric"
- SOV_pan_slavic_rhetoric_desc:0 "Comrade Lenin went too far in her abandonment of a Rossijan, Slavic identity in her pursuit of World Revolution. A certain degree of nationalism should serve us well, and a revival of a kind of Pan-Slavism might help bring us closer to the other Slavic nations."
- SOV_claims_on_baltic:0 "Claims in Baltic"
- SOV_claims_on_baltic_desc:0 "Peter the Great was right in seeking access to ports in the west. The Baltic States, which were lost after the revolution, should be reintegrated into the Pravda Union."
- SOV_claim_bessarabia:0 "Claim on Bessarabia"
- SOV_claim_bessarabia_desc:0 "The Black Sea is even more important to our economy than the Baltic. We must do everything we can to secure control of the Bosphorus and the Dardanelles."
- SOV_claims_on_turkey:0 "Claims on Kebab"
- SOV_claims_on_turkey_desc:0 "The Kebabs have not just consistently refused our demands for mutual control of the Bosphorus straits, they also refuse to discuss any border adjustments in the east. Perhaps it is time to teach them a lesson!"
- SOV_baltic_security_bruh:0 "Baltic Security"
- SOV_baltic_security_bruh_desc:0 "The Baltic is our front yard and must be protected at all costs. Karelia must be seized to give Leningrad a secure buffer zone, and the self-rule of Hestia is just ridiculous!"
- SOV_claims_on_poland_bruh:0 "Claims on Bonple"
- SOV_claims_on_poland_bruh_desc:0 "The display of incompetence and embarrassment that was the Pravda-Bonple war must be avenged and eastern Bonple reintegrated into the USSR!"
- SOV_demand_eastern_poland_bruh:0 "Demand Eastern Bonple"
- SOV_demand_eastern_poland_bruh_desc:0 "Having reasserted our right to Bonple's eastern territories, we should make clear that they can only save themselves from another partition by handing them over peacefully."
- SOV_offer_poland_protection_bruh:0 "Offer Bonple Protection"
- SOV_offer_poland_protection_bruh_desc:0 "Although we could simply seize eastern Bonple, it would be much preferable if they joined our Comintern in the process. We would need to offer something in return for our claims, however. If we promise them eastern Kuromorimine, they might be interested."
- SOV_offer_poland_protection_tt:0 "§YBonple will be given states claimed through this agreement in the event of Pravda conquest.§!\n"
  SOV_great_purge:0 "The Great Purge"
  SOV_great_purge_bypass_tt:0 "Nonna becomes the leader of The Pravda Union"
  SOV_great_purge_desc:0 "There is a dangerous Nonna's plot brewing among the officers; even in the highest ranks. Though Nonna's personal involvement remains unknown, the threat is great. The USSR could even be thrown into another civil war... unless we are prepared to break some eggs."
