More Localisation of Pravda Focuses and Descriptions

--- a/maddenist stuffs/localisation/english/pravda_focus_l_english.yml
+++ b/maddenist stuffs/localisation/english/pravda_focus_l_english.yml
@@ -21,14 +21,78 @@
  SOV_expanding_resettlement_desc:0 "Over the course of years since the Pravda Revolution, many Students lost their homes due to the civil war that saw many homes and villages under the School Districts that make up Pravda destroyed. Not to mention famines that have been done due to the incompetence of the previous student Council that controlled Pravda before Katyusha. It is time to restore these settlements back for the Students of Pravda."
  SOV_katyusha_tractor:0 "Construct the Katyusha Tractor Industrial Complex"
  SOV_katyusha_tractor_desc:0 "With the resettlement program in full swing, Pravda is in need of a new industrial complex that will produce more tractors that will benefit further plans focusing towards modernizing the farmers for more yields. On this idea, General Secretary Katyusha orders for the construction of the Katyusha Tractor Industrial Complex."
- SOV_expanding_GAZ:0 "(What is a GAZ?)"
- SOV_expanding_GAZ_desc:0 "lol"
+ SOV_expanding_GAZ:0 "Expanding G.A.Z. Operations"
+ SOV_expanding_GAZ_desc:0 "Currently, Pravda is in need of more facilities geared towards the production of automobiles – especially with the deployment of such vehicles in Pravda military operations. To fill in the lack of supply in this particular product, the Student Council ordered the expansion of the School-owned General Automotive Zone (G.A.Z.) industrial complexes in addition to funding to bolster their Research and Development teams for better products."
  SOV_modernize_agriculture:0 "Agricultural Modernization Plan"
  SOV_modernize_agriculture_desc:0 "The Agricultural Modernization Plan is a program credited to General Secretary Katyusha that aims to replace the old traditional methods of farming, those that were proven to produce low quality and small yields, with new technology and techniques that have seen larger yields of crop. This may be done through direct orders by the Student Council, Rural Education Campaigns, and providing aid to farmer students."
  SOV_import_technical_experts:0 "Hire Foreign Technical Experts"
  SOV_import_technical_experts_desc:0 "Despite General Secretary Katyusha’s reputation as a stubborn commander, even she knew that the technical students in Pravda are in need of more professional teachers to learn from. This calls for the employment of outside-school experts that would teach and tutor the technical students to become better in their craft."
  SOV_new_3_year:0 "The New Three Year Plan"
  SOV_new_3_year_desc:0 "Against Katyusha's expectations, the Five Year Plan had drawn into a close – with the agricultural figures lagging behind to other projects. While this enraged the General Secretary, she had to grudgingly order the creation of a three year plan focused towards improving the crop yield and resettlement situation in Pravda."
+ SOV_power_to_the_workers:0 "Power to the Working Students!"
+ SOV_power_to_the_workers_desc:0 "The Student Workers are the bedrock of what made the Pravda Revolution possible! It is time for the School to reward them for their sacrifices in skipping their part-time work to keep out the old regime and support the General Secretary throughout the challenges they all faced together."
+ SOV_katyushagrad_university:0 "Grand Opening of Katyushagrad University"
+ SOV_katyushagrad_university_desc:0 "People could not say that Katyusha does not care about the education of all students in Pravda, especially with the latest investment from the General Secretary’s own pockets. The school now has a new branch that enables University and former Pravda students to rejoin their beloved school once again under the new branch of Pravda: Katyushagrad University."
+ SOV_expand_communist_education:0 "Expand Pravda's Education Structure"
+ SOV_expand_communist_education_desc:0 "Pravda’s dedication to provide high quality education for each and every student knows no bounds, and General Secretary Katyusha is here to push for this concept much further. New Policies are developed aimed towards creating a healthy balance of Study and Rest in addition to free healthy and quality meals for all times of the day."
+ SOV_vladivostok_naval_academy:0 "Open the Vladivostok Naval Academy!"
+ SOV_vladivostok_naval_academy_desc:0 "As a continuation of Pravda’s dedication to expand the horizons of education in the Union of Sensha-do School Regions, General Secretary Katyusha announced the opening of a new academy dedicated to the Navy Club of the school. This place will allow the development of new naval commanders that will command Pravda’s fleets at sea."
+ SOV_modern_soviet:0 "The Modern Pravda Student"
+ SOV_modern_soviet_desc:0 "Compared to students throughout its history and that of the world, the Modern Pravda Student has benefited enormously by the reforms and developments that were passed through by the hard work of the General Secretary Katyusha. Still, that does not mean that there is nothing more to be done to improve the education structure for all Pravda Students!"
+ SOV_katyusha_rockets:0 "Rockets came out and exploded, Katyusha!"
+ SOV_katyusha_rockets_desc:0 "The Katyusha Project, commissioned by General Secretary Katyusha, focuses on what is presumed to be the Pravda leader’s ambition – to finally reach the stars. Engineers and scientists from across Pravda are invited with generous bonuses to enable this ambition to come into practicality."
+ SOV_palace_revolution:0 "The Katyusha Revolution Palace"
+ SOV_palace_revolution_desc:0 "The Crown Jewel of Katyusha’s legacy as the General Secretary of the Union of Sensha-do School Regions – or Pravda for short. The Katyusha Revolution Palace shall become the largest and tallest building in the world, with a statue of Katyusha on top of it to symbolize the victory of Pravda! It shall become the main hub of governing and decision making of the Student Council."
+ SOV_weapons_development:0 "Pravda Weapons Development Program"
+ SOV_weapons_development_desc:0 "As the world ever inches closer to another Global War it becomes clear that Pravda needs to increase its edge in weaponry. Talented gunsmiths from all walks of life are invited in competitions to design the best weapons from simple rifles to artillery pieces. The best chosen shall represent this new era of warfare that Pravda may partake in."
+ SOV_aggressive_industrial_expansion:0 "Agressive Industrial Expansion Plans"
+ SOV_aggressive_industrial_expansion_desc:0 "As part of the final year of the Five Year Plan, General Secretary Katyusha has ordered more investments and pushed forth an aggressive drive that will see more industrial complexes constructed on Pravda territory. This would ensure that more products will be produced that will contribute to trade with other schools."
+ SOV_develop_east:0 "Develop the Eastern School Regions"
+ SOV_develop_east_desc:0 "Compared to its western counterparts, the eastern school regions of the Union are in need of investments and prioritization by the Student Council to ensure that Pravda will reach its full industrial potential. This would mean more construction of necessary infrastructure and more industrial facilities that will benefit the school and its students."
+ SOV_expand_vladivostok_arctic:0 "Expand the Vladivostok Arctic Industrial Complexes and Shipyards"
+ SOV_expand_vladivostok_arctic_desc:0 "The Industrial facilities in the Vladivostok Arctic Region are in need of more investments from the Student Council that will bolster more production of ships with local industry that will increase the production of ships by Pravda. Of course, this means more infrastructure expansion is necessary alongside the industrial complexes and shipyards."
+ SOV_collective_expansion:0 "Expand Pravda Agricultural Collectives"
+ SOV_collective_expansion_desc:0 "There are collectives across Pravda made of students with a background related with agriculture, notably from farming families. It is obvious after looking at the previous failures of the last regime as they have mismanaged food security to cause several famines. To combat this, General Secretary Katyusha orders the expansion of the collectives with reduced food quotas to the School so the collectives can keep more of their stock."
+ SOV_end_peacetime_rationing:0 "End Peacetime Rationing"
+ SOV_end_peacetime_rationing_desc:0 "As part of the new agricultural changes across Pravda, General Secretary Katyusha orders a halt on her previous orders that saw the enactment of peacetime rationing. Now with higher yields and collectives keeping more crops for food security, there is no reason to keep rationing as a policy."
+ SOV_land_clearances:0 "Land Clearances for New Construction Projects"
+ SOV_land_clearances_desc:0 "With the recent construction projects done to develop the school throughout its territories, there is still more land in Pravda that is currently not used for much of anything. This must change in order to allow more construction projects to be built in the area. General Secretary Katyusha orders land clearances of large swabs of forests to make more space for new construction projects."
+ SOV_Great_Liberation_Mobilization:0 "The Great Liberation War Mobilization"
+ SOV_Great_Liberation_Mobilization_desc:0 "The Great Liberation War is upon us! Many in the School knew this day would come, regardless if Pravda is on the defensive or offensive, and had previously drafted a mobilization plan to quickly gather troops against the enemies that threaten the school. With a state of war existing between Pravda and another school, these mobilization plans are enacted – effective immediately."
+ SOV_like_waves:0 "Move Like Waves"
+ SOV_like_waves_desc:0 "Kuromorimine and their Blitzkrieg? Fah, what a joke! They rely too much on making spearheads aided by close air bombers that act as shock for armoured and unarmoured divisions to pierce through frontlines! If they want to act as a lightning bolt, Pravda’s forces shall move as waves – engulfing their pathetic tactic of encirclement to be encircled themselves!"
+ SOV_Emergency_Uni_Mob:0 "Emergency University Mobilization"
+ SOV_Emergency_Uni_Mob_desc:0 "There is no time to waste to defend Pravda! Veterans of the previous Sensha-do Tournaments, now University Students, are being called in via invitation to protect their home school against the threats that have shown on the doorstep of the Union!"
+ SOV_Mobilize_First_Years:0 "Mobilize the First Years!"
+ SOV_Mobilize_First_Years_desc:0 "Usually the First Years have the option to choose other courses that they want to pursue by choice. With Pravda at a current state of war, this policy shall be amended in favour of replacing the current classes with warfare-related applications in addition to enforcing military practicalities for all school clubs. They shall be mobilized to help the war effort against Pravda’s enemies!"
+ SOV_Nonna_Temporary:0 "The Temporary Command of Nonna"
+ SOV_Nonna_Temporary_desc:0 "How did General Secretary Katyusha sleep through the noise? With her being indisposed at the moment, it is up to Nonna to hold temporary military command over all Pravda forces while waiting for Katyusha to awake from her nap."
+ SOV_Hold_Fast:0 "Hold Fast!"
+ SOV_Hold_Fast_desc:0 "The enemy is at the gates! There is no time for each and every student to fall back to allow the oppressors to acquire more territory from Pravda! The Pravda High Command has ordered a halt to current retreats in favour of stopping the enemy in their tracks and to conduct stiff and flexible defence to whittle their will to fight."
+ SOV_Student_Guard:0 "The Importance of the Student Guard"
+ SOV_Student_Guard_desc:0 "The Student Guard is necessary in order to remind students that they are there to fight for their beloved school against the oppressors."
+ SOV_Curtail_Student_Guard:0 "Reduce the power of the Student Guard"
+ SOV_Curtail_Student_Guard_desc:0 "The Student Guard, while helpful in reminding students of their duty to their school, does not need more power and influence that may be hijacked by political aspirants for seats in the Student Council. That’s not mentioning the fact that there are students that have filed complaints of unruly behaviour against them by the Guards themselves."
+ SOV_Student_Punishment:0 "Student Punishment"
+ SOV_Student_Punishment_desc:0 "Students that flee from their duty against the oppressors will not be tolerated! As commanded by the Student Council, any student that leaves or disobeys Pravda guidelines in the military shall be punished by working in the fields in Siberia."
+ SOV_First_Year_Reserve:0 "The First Year Reservists"
+ SOV_First_Year_Reserve_desc:0 ""
+ SOV_purge_disloyalty:0 "Purging Disloyal Elements"
+ SOV_purge_disloyalty_desc:0 ""
+ SOV_doctrine_mind:0 "The Katyusha Doctrine"
+ SOV_doctrine_mind_desc:0 ""
+ SOV_dealing_Klara:0 "Dealing with Klara"
+ SOV_dealing_Klara_desc:0 ""
+ SOV_isolate_nonna:0 "Isolate Nonna"
+ SOV_isolate_nonna_desc:0 ""
+ SOV_pawns_on_board:0 "Pawns on the Board"
+ SOV_pawns_on_board_desc:0 ""
+ SOV_firm_hand:0 "A Firm Hand"
+ SOV_firm_hand_desc:0 ""
+ SOV_katyusha_cult:0 "The Katyusha Cult"
+ SOV_katyusha_cult_desc:0 ""
+ SOV_power_struggle_aftermath:0 "The Aftermath of the Pravda Power Struggle"
+ SOV_power_struggle_aftermath_desc:0 ""
  
  SOV_annex_tannu_tuva:0 "Annex Tannu Tuva"
  SOV_annex_tannu_tuva_desc:0 "While it hardly matters economically, for political reasons we should formally annex the People's Republic of Tannu Tuva as an autonomous oblast within the Pravda Union."
