Nearly finished Desc and Titles for Prav Local

--- a/maddenist stuffs/localisation/english/pravda_focus_l_english.yml
+++ b/maddenist stuffs/localisation/english/pravda_focus_l_english.yml
@@ -76,23 +76,23 @@
  SOV_Student_Punishment:0 "Student Punishment"
  SOV_Student_Punishment_desc:0 "Students that flee from their duty against the oppressors will not be tolerated! As commanded by the Student Council, any student that leaves or disobeys Pravda guidelines in the military shall be punished by working in the fields in Siberia."
  SOV_First_Year_Reserve:0 "The First Year Reservists"
- SOV_First_Year_Reserve_desc:0 ""
+ SOV_First_Year_Reserve_desc:0 "Needing more Students to defend Pravda against the opposing school, it is time to call upon the aid of the First Years that are in the reserve force."
  SOV_purge_disloyalty:0 "Purging Disloyal Elements"
- SOV_purge_disloyalty_desc:0 ""
+ SOV_purge_disloyalty_desc:0 "Recently there has been an uptick in resistance against the General Secretary of the Student Council and overall Commander of the Pravda Military Club Katyusha, it is time to remind many students of the privileges that were allowed to them by that very same person they remain disloyal to."
  SOV_doctrine_mind:0 "The Katyusha Doctrine"
- SOV_doctrine_mind_desc:0 ""
+ SOV_doctrine_mind_desc:0 "With Pravda entering a precarious situation on the world stage, Katyusha is no longer in the mood of listening to Student Politician-wannabes trying to call for some permanent revolution or to cause unneeded chaos in the school. Pravda’s revolution shall be contained in one country to stabilize and bring order before further moves – that is the Katyusha Doctrine."
  SOV_dealing_Klara:0 "Dealing with Klara"
- SOV_dealing_Klara_desc:0 ""
+ SOV_dealing_Klara_desc:0 "Klara is clearly an Agent of Chaos, with her wanting to confuse and annoy the General Secretary Katyusha! She must be dealt with before she could be inspired to cause more unneeded damage to the Spirit of Pravda..and can she speak in Japanese for once!"
  SOV_isolate_nonna:0 "Isolate Nonna"
- SOV_isolate_nonna_desc:0 ""
+ SOV_isolate_nonna_desc:0 "Nonna is clearly compromised or close to being compromised. It is clear on this basis that she needs to re-enter a time of reflection with a staycation for an indefinite amount of time in the comfort of her home. This will allow her to rethink the good things that Katyusha has done for Pravda!"
  SOV_pawns_on_board:0 "Pawns on the Board"
- SOV_pawns_on_board_desc:0 ""
+ SOV_pawns_on_board_desc:0 "The board has been set, the pieces are at their positions, it is now time for Katyusha to outwit her opponents for a second time!"
  SOV_firm_hand:0 "A Firm Hand"
- SOV_firm_hand_desc:0 ""
+ SOV_firm_hand_desc:0 "Katyusha’s enemies have been outmaneuvered at every moment of the way, now it is time for the General Secretary’s direct involvement to begin."
  SOV_katyusha_cult:0 "The Katyusha Cult"
- SOV_katyusha_cult_desc:0 ""
+ SOV_katyusha_cult_desc:0 "Out of all the players that were once in the game of chess, all that is left is Katyusha. With this glorious victory under her belt, she declares a new parade that signifies the beginning of her era – full of posters and statues that symbolizes this very event."
  SOV_power_struggle_aftermath:0 "The Aftermath of the Pravda Power Struggle"
- SOV_power_struggle_aftermath_desc:0 ""
+ SOV_power_struggle_aftermath_desc:0 "Katyusha has won the Great Game in the Pravda Student Council, now what is left for the General Secretary to do is to remove any remnants of powers that the traitors still held onto."
  
  SOV_annex_tannu_tuva:0 "Annex Tannu Tuva"
  SOV_annex_tannu_tuva_desc:0 "While it hardly matters economically, for political reasons we should formally annex the People's Republic of Tannu Tuva as an autonomous oblast within the Pravda Union."
